updated espa.css to fix IE layout issues
git-svn-id: http://espa.googlecode.com/svn/trunk@794 3726ddd0-ec42-1013-fcf5-bb297c8a0eb8

--- a/web/espa_web/static/css/espa.css
+++ b/web/espa_web/static/css/espa.css
@@ -1,6 +1,7 @@
 #container {
     width: 100%; 
     background: #ffffff;
+    
 }
 
 #nav {
@@ -10,6 +11,8 @@
     padding-bottom:8px;
     font-size:12px;
     margin-top:-3px;
+    overflow:auto;
+    line-height:20px;
 }
 
 #nav a{
@@ -19,12 +22,21 @@
 span.navitemleft {
     padding-left:15px;
     font-weight:bold;
+    line-height:20px;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+    float:left;
 }
 
 span.navitemright {
     float:right;
     padding-right:15px;
+    line-height:20px;
     font-weight:bold;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
 }
 
 div.admin {
